tdf#106653: Try harder not to return 0 for Kashida width

The font in the bug document has a very small Kashida advance width and
this gets rounded to zero at smaller zoom level. Try to round up the
value to avoid returning zero too eagerly.

Change-Id: I78c309d66a9e94812827c7c6724c67c4d09bcff9